Fix horizontal scroll on homepage

--- a/web/assets/css/main.css
+++ b/web/assets/css/main.css
@@ -97,7 +97,8 @@ a:focus {
 }
 
 /* Put the slider nav inside the jumbotron */
-.jumbotron .flex-control-nav {
+.jumbotron .flex-control-nav,
+.jumbotron .flex-direction-nav {
   position: relative;
 }
 
